# nexl

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  decisions  examples  milestones.md  nexl-spec.md
.claude/commands/: add-crate.md  check.md  e2e-test.md  error-message.md  impl-from-spec.md  milestone-status.md  next-task.md  release.md  spec-lookup.md  update-todo.md  wasm-check.md
.github/workflows/: ci.yml
cookbook/: 01-hello-world.nx  02-functions-and-let.nx  03-pattern-matching.nx  04-collections.nx  05-error-handling.nx  06-json.nx  07-http-client.nx  08-database.nx  09-testing.nx  10-environment.nx  11-custom-types.nx  12-map-filter-reduce.nx  13-structured-logging.nx  14-dotenv.nx  15-string-ops.nx  16-recursion.nx  17-math.nx  18-closures.nx  19-wasm-compile.nx  20-time-random.nx  21-sandboxing.nx  22-contracts.nx  23-project-structure.nx  24-pipe-threading.nx  25-json-api.nx  26-property-testing.nx  27-do-blocks.nx  28-sys-args.nx  29-web-service.nx  30-formatter.nx  README.md
crates/nexl-ast/: Cargo.toml
crates/nexl-ast/src/: assert.rs  component.rs  defhandler.rs  effect.rs  ffi.rs  handle.rs  lib.rs  module.rs  node.rs  pattern.rs  printer.rs  protocol.rs  span.rs  try_catch.rs
crates/nexl-cli/: Cargo.toml
crates/nexl-cli/src/: functions.rs  main.rs  repl_protocol.rs  wasm_runner.rs
crates/nexl-cli/tests/: e2e.rs
crates/nexl-cli/tests/fixtures/: arithmetic.expected  arithmetic.nx  async_stdlib.expected  async_stdlib.nx  channel_stdlib.expected  channel_stdlib.nx  defhandler_continuation.nx  defhandler_multi_effect.nx  defhandler_nested.nx  defhandler_parameterized.nx  defhandler_simple.expected  defhandler_simple.nx  functions.expected  functions.nx  let-and-cond.expected  let-and-cond.nx  log_stdlib.expected  log_stdlib.nx  nexl_test_macros.expected  nexl_test_macros.nx  option_stdlib.expected  option_stdlib.nx  process_stdlib.expected  process_stdlib.nx  sys_stdlib.nx
crates/nexl-doc/: Cargo.toml
crates/nexl-doc/src/: lib.rs
crates/nexl-effects/: Cargo.toml
crates/nexl-effects/src/: builtin.rs  lib.rs  sequential_executor.rs
crates/nexl-errors/: Cargo.toml
crates/nexl-errors/src/: codes.rs  lib.rs
crates/nexl-eval/: Cargo.toml
crates/nexl-eval/src/: eval.rs  lib.rs  modules.rs  repl.rs  stdlib.rs
crates/nexl-infer/: Cargo.toml
crates/nexl-infer/src/: env.rs  infer.rs  lib.rs
crates/nexl-ir/: Cargo.toml
crates/nexl-ir/src/: lib.rs  lower.rs
crates/nexl-ir/src/optimize/: const_fold.rs  dce.rs  escape.rs  inline.rs  mod.rs  reuse.rs  specialize.rs
crates/nexl-lsp/: Cargo.toml
crates/nexl-lsp/src/: lib.rs
crates/nexl-macros/: Cargo.toml
crates/nexl-macros/src/: expand.rs  lib.rs  scope.rs  syntax.rs
crates/nexl-memory/: Cargo.toml
crates/nexl-memory/src/: lib.rs
crates/nexl-modules/: Cargo.toml
crates/nexl-modules/src/: lib.rs  resolver.rs
crates/nexl-native/: Cargo.toml
crates/nexl-native/src/: closure.rs  compile.rs  continuation.rs  evidence.rs  lib.rs  rc.rs  reuse.rs  value.rs
crates/nexl-pkg/: Cargo.toml
crates/nexl-pkg/src/: lib.rs
crates/nexl-reader/: Cargo.toml
crates/nexl-reader/src/: lexer.rs  lib.rs  reader.rs
crates/nexl-reader/tests/: error_messages.rs
crates/nexl-runtime/: Cargo.toml
crates/nexl-runtime/src/: ffi_pin.rs  lib.rs  sandbox.rs  sys.rs  value.rs
crates/nexl-stdlib/: Cargo.toml
crates/nexl-stdlib/nexl/: async.nx  base64.nx  bit.nx  builtins.nx  channel.nx  char.nx  conv.nx  core.nx  crypto.nx  csv.nx  db.nx  env.nx  http.nx  io.nx  iter_impl.nx  json.nx  log.nx  map_impl.nx  math.nx  net.nx  option_impl.nx  path.nx  process.nx  random.nx  result_impl.nx  set_impl.nx  str.nx  sys.nx  test.nx  time.nx  toml.nx  uri.nx  uuid.nx  vec.nx  vec_impl.nx
crates/nexl-stdlib/src/: async_mod.rs  base64_mod.rs  bit.rs  channel_mod.rs  char.rs  conv.rs  core.rs  crypto.rs  csv_mod.rs  db.rs  env.rs  gen_mod.rs  http.rs  io.rs  json.rs  lib.rs  log.rs  map.rs  math.rs  net.rs  path_mod.rs  process_mod.rs  random.rs  regex_mod.rs  set.rs  str.rs  sys.rs  test.rs  time.rs  toml_mod.rs  uri_mod.rs  uuid_mod.rs  vec.rs
crates/nexl-types/: Cargo.toml
crates/nexl-types/src/: lib.rs  resource.rs  subst.rs  types.rs  unify.rs
crates/nexl-wasm/: Cargo.toml
crates/nexl-wasm/src/: canonical_abi.rs  composition.rs  effect_wasi.rs  emit.rs  gc_emit.rs  lib.rs  marshal.rs  wasi3.rs  wit.rs  wit_export.rs  wit_import.rs
docs/: component-composition.md  crate-map.md  current-milestone.md  glossary.md  kernel-bootstrap.nx  kernel-bootstrap.nxl  kernel-subset.md  migration.md  nexl-test-spec.md  stability.md  stage-2-milestones.md  stdlib-spec.md  todo-m0.md  todo-m1.md  todo-m10.md  todo-m11.md  todo-m12.md  todo-m13.md  todo-m14.md  todo-m15.md  todo-m16.md  todo-m17.md  todo-m18.md  todo-m19.md  todo-m2.md  todo-m20.md  todo-m21.md  todo-m22.md  todo-m23.md  todo-m24.md  todo-m25.md  todo-m26.md  todo-m27.md  todo-m28.md  todo-m29.md  todo-m3.md  todo-m30.md  todo-m31.md  todo-m32.md  todo-m4.md  (+6 more)
editors/neovim/: README.md  lsp.lua
editors/neovim/ftdetect/: nexl.vim
editors/neovim/ftplugin/: nexl.vim
editors/neovim/syntax/: nexl.vim
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: nexl.tmLanguage.json
scripts/: convert_docstrings.py
