[workspace]
resolver = "2"
members = [
    "crates/nexl-ast",
    "crates/nexl-reader",
    "crates/nexl-errors",
    "crates/nexl-runtime",
    "crates/nexl-eval",
    "crates/nexl-types",
    "crates/nexl-infer", "crates/nexl-modules",
    "crates/nexl-effects", "crates/nexl-ir", "crates/nexl-wasm", "crates/nexl-memory", "crates/nexl-cli", "crates/nexl-macros", "crates/nexl-native", "crates/nexl-stdlib", "crates/nexl-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
