[package]
name = "nexl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nexl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
nexl-reader = { path = "../nexl-reader" }
nexl-errors = { path = "../nexl-errors" }
nexl-eval = { path = "../nexl-eval" }
nexl-macros = { path = "../nexl-macros" }
nexl-modules = { path = "../nexl-modules" }
nexl-runtime = { path = "../nexl-runtime" }
nexl-infer = { path = "../nexl-infer" }
nexl-ir = { path = "../nexl-ir" }
nexl-wasm = { path = "../nexl-wasm" }
nexl-native = { path = "../nexl-native" }
nexl-lsp = { path = "../nexl-lsp" }
nexl-pkg = { path = "../nexl-pkg" }
nexl-doc = { path = "../nexl-doc" }
nexl-stdlib = { path = "../nexl-stdlib" }
tokio = { version = "1", features = ["full"] }
meta = { package = "nexl-ast", path = "../nexl-ast" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = "42"
wasmtime-wasi = "42"
