[package]
name = "nexl-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walk evaluator for Nexl (M1)"

[dependencies]
nexl-runtime = { path = "../nexl-runtime" }
meta = { package = "nexl-ast", path = "../nexl-ast" }
nexl-reader = { path = "../nexl-reader" }
thiserror = "1.0"
