[package]
name = "nexl-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walk evaluator for Nexl (M1)"

[dependencies]
nexl-runtime = { path = "../nexl-runtime" }
meta = { package = "nexl-ast", path = "../nexl-ast" }
nexl-reader = { path = "../nexl-reader" }
nexl-modules = { path = "../nexl-modules" }
nexl-stdlib = { path = "../nexl-stdlib" }
nexl-macros = { path = "../nexl-macros" }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
