[package]
name = "nexl-native"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native code generation via Cranelift for the Nexl compiler"

[dependencies]
nexl-ir = { path = "../nexl-ir" }

cranelift-codegen = "0.120"
cranelift-frontend = "0.120"
cranelift-module = "0.120"
cranelift-object = "0.120"
target-lexicon = "0.13"
