[package]
name = "nexl-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexl-reader = { path = "../nexl-reader" }
meta = { package = "nexl-ast", path = "../nexl-ast" }
thiserror = "2"
redb = "2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
