[package]
name = "nexl-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexl-ir = { version = "0.1.0", path = "../nexl-ir" }
nexl-types = { version = "0.1.0", path = "../nexl-types" }
wasm-encoder = "0.245.1"

[dev-dependencies]
nexl-reader = { path = "../nexl-reader" }
meta = { package = "nexl-ast", path = "../nexl-ast" }
wasmparser = "0.245.1"
tempfile = "3"
